test(product-catalog): cobrir mappers, storage fake e property até 100%
Ajusta os stubs da agregação de produtos para o novo fluxo Product -> mapper
e adiciona casos para abreviação de descrição, montagem de URL de imagem,
branch em branco do converter, URI inválida no storage fake e a property de
mapeamento, fechando a cobertura em 100% (JaCoCo minimum = 1.0).